<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuickPayment</string>
    <string name="hello_world">Start scanning</string>
    <string name="action_settings">Settings</string>
    <string name="btn_requestpayment">Request payment</string>
    <string name="btn_pay">Read</string>
    <string name="btn_exit">Exit</string>
    <string name="title_activity_prepare_request">Choose amount</string>
    <string name="btn_backfromprepare">Back</string>
    <string name="btn_show_code">Show code</string>
    <string name="title_activity_show_code">ShowCode</string>
    <string name="title_activity_read_payment">ReadPayment</string>
    <string name="btnAccept">Accept</string>
    <string name="btnReject">Reject</string>

</resources>
