<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.marksky.quickpayment.MainActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/btnRequest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPay"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:text="@string/btn_requestpayment"
        android:onClick="onClick" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnRequest"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        android:text="@string/btn_pay" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnPay"
        android:layout_below="@+id/btnPay"
        android:text="@string/btn_exit"
        android:onClick="onClick" />

</RelativeLayout>
